--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
             <form method="post" action="#" class="contact-form">
               <div class="row">
                 <div class="col span-1-of-3">
-                  <label>Name</label>
+                  <label for="name">Name</label>
                 </div>
                 <div class="col span-2-of-3">
                   <input type="text" name="name" id="name" placeholder="Your name" required>
@@ -324,7 +324,7 @@
               </div>
               <div class="row">
                 <div class="col span-1-of-3">
-                  <label>Email</label>
+                  <label for="email">Email</label>
                 </div>
                 <div class="col span-2-of-3">
                   <input type="email" name="email" id="email" placeholder="Your email" required>
@@ -332,12 +332,12 @@
               </div>
               <div class="row">
                 <div class="col span-1-of-3">
-                  <label>How did you find us?</label>
+                  <label for="find-us">How did you find us?</label>
                 </div>
                 <div class="col span-2-of-3">
                   <select name="find-us" id="find-us">
-                    <option value="friends">Friends</option>
-                    <option value="search" selected>Search Engine</option>
+                    <option value="friends" selected>Friends</option>
+                    <option value="search">Search Engine</option>
                     <option value="ad">Advertisement</option>
                     <option value="other">other</option>
                   </select>
@@ -371,5 +371,17 @@
           </div>
         </section>
 
+        <footer>
+          <div class="row">
+            <div class="col span-1-of-2">
+              <ul class="footer-nav">
+
+              </ul>
+            </div>
+            <div class="col span-1-of-2">
+
+            </div>
+          </div>
+        </footer>
   </body>
 </html>
